--- a/homePage.html
+++ b/homePage.html
@@ -20,7 +20,7 @@
             <img src="images/banner_03.png" alt="">
         </aside>
         <nav>
-            <li>我的</li>
+            <li style="color: #272727">我的</li>
             <li>QQ音乐</li>
             <li>喜马拉雅</li>
             <li>儿童</li>
@@ -36,20 +36,26 @@
     <footer>
         <li>
             <img src="images/shouye_03.png" alt="">
-           <span> 首页</span>
+           <span style="color: #f0644d"> 首页</span>
         </li>
         <li>
-            <img src="images/zhinengjiaju_03.png" alt="">
-            <span>智能家居</span>
-        </li>
+            <a href="smartHome.html">
+                <img src="images/zhinengjiaju_03.png" alt="">
+            </a>
+                <span>智能家居</span>
+            </li>
         <li>
-            <img src="images/jinegzhongxin_03.png" alt="">
-            <span>技能中心</span>    
-        </li>
+            <a href="skillCenter.html">
+                <img src="images/jinegzhongxin_03.png" alt="">
+            </a>
+                <span>技能中心</span>    
+            </li>
         <li>
-            <img src="images/wo_03.png" alt="">
-           <span> 我</span>
-        </li>
+            <a href="me.html">
+                <img src="images/wo_03.png" alt="">
+            </a>
+                <span> 我</span>
+            </li>
     </footer>
 </body>
 </html>
