--- a/skillCenter.html
+++ b/skillCenter.html
@@ -18,10 +18,12 @@
                 <img src="images/dainhua_03.png" alt="">
                 <span>电话</span>
                 </li>
+                <a href="clock.html">
                 <li>
                 <img src="images/naozhong_03.png" alt="">
                 <span>闹钟</span>
-                </li>
+            </li>
+        </a>
                 <li>
                 <img src="images/xaioaishenghuo_03.png" alt="">
                 <span>小爱训练</span>
@@ -75,22 +77,28 @@
             </main>
             <footer>
                     <ul>
-                        <li>
+                        <a href="homePage.html">
+                            <li>
                             <img src="images/shouye2_03.png" alt="">
                             <p>首页</p>
                         </li>
-                        <li>
+                            </a>
+                        <a href="smartHome.html">
+                            <li>
                             <img src="images/zhinengjiaju_03.png" alt="">
                             <p >智能家居</p>
                         </li>
+                            </a>
                         <li>
                             <img src="images/jinengzhongxin2_03.png" alt="">
                             <p style="color: #f0644d">技能中心</p>
                         </li>
+                        <a href="me.html">
                         <li>
                             <img src="images/wo_03.png" alt="">
                             <p>我</p>
                         </li>
+                    </a>
                     </ul>
                 </footer>        
 </body>
