--- a/smartHome.html
+++ b/smartHome.html
@@ -64,22 +64,30 @@
     </main>
     <footer>
         <ul>
-            <li>
-                <img src="images/shouye2_03.png" alt="">
-                <p>首页</p>
-            </li>
-            <li>
-                <img src="images/zhinengjiaju2_03.png" alt="">
-                <p style="color: #f0644d">智能家居</p>
-            </li>
-            <li>
-                <img src="images/jinegzhongxin_03.png" alt="">
-                <p>技能中心</p>
-            </li>
-            <li>
-                <img src="images/wo_03.png" alt="">
-                <p>我</p>
-            </li>
+            <a href="homePage.html"> 
+                <li>
+                    <img src="images/shouye2_03.png" alt="">
+                    <p>首页</p>
+                </li>
+            </a>
+            <a href="smartHome.html"> 
+                <li>
+                    <img src="images/zhinengjiaju2_03.png" alt="">
+                    <p style="color: #f0644d">智能家居</p>
+                </li>
+            </a>
+            <a href="skillCenter.html"> 
+                <li>
+                    <img src="images/jinegzhongxin_03.png" alt="">
+                    <p>技能中心</p>
+                </li>
+            </a>
+            <a href="me.html"> 
+                <li>
+                    <img src="images/wo_03.png" alt="">
+                    <p>我</p>
+                </li>
+            </a>
         </ul>
     </footer>
 </body>
